<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApp</string>
    <string name="action_1">你妹啊</string>
    <string name="action_2">吐个槽</string>
    <string name="action_3">死鸡毛神</string>
    
    <string name="station">淮安站</string>
    <string name="searchhint">请输入关键字</string>
    <string name="map">地图</string>
    <string name="list">列表</string>
    <string name="category">分类</string>
    <string name="distance">距离</string>
    <string name="price">价格</string>
    <string name="back">返回</string>
    <!-- tab -->
    <string name="tab_name0">首页</string>
    <string name="tab_name1">淘信</string>
    <string name="tab_name2">淘物</string>
    <string name="tab_name3">淘友</string>
    <string name="tab_name4">淘讯</string>

    <!-- login -->
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="save_password">保存密码</string>
    <string name="right_to_login">立即登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="no_register">马上去注册&#160;></string>

    <!-- register -->
    <string name="welcome_register">欢迎注册</string>
    <string name="setting_head_icon">设置头像</string>
    <string name="phone_number">手机号</string>
    <string name="setting_password">设置密码</string>
    <string name="confirm_password">请再次输入密码</string>
    <string name="right_to_register">立即注册</string>
    <string name="visitor_entrance">游客入口&#160;></string>
    <string name="take_photo">拍照</string>
    <string name="photo_album">相册</string>

    <!-- reset -->
    <string name="reset_password">重置密码</string>
    <string name="verify_code">请输入短信验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="new_password">请输入新密码</string>

    <!-- personal information -->
    <string name="personal_information">个人信息</string>
    <string name="head_icon">头像</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="input_birth_date">请输入出生日期</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="signature">个性签名</string>
    <string name="email">邮箱</string>
    <string name="weibo">微博</string>
    <string name="weixin">微信</string>
    <string name="confirm_modify">确认修改</string>
    <string name="birth_date">出生日期</string>
    <string name="nickname">昵称</string>

</resources>