<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.demo.testapp.MainActivity" >

    <item
        android:id="@+id/action1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_1"/>
    <item
        android:id="@+id/action2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_2">
        <menu>
            <item
                android:id="@+id/action21"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_1"/>
            <item
                android:id="@+id/action22"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/action_2"/>
        </menu>
    </item>
    <item
        android:id="@+id/action3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_3">
        <menu>
            <group android:id="@+id/group1">
                <item
                    android:id="@+id/action31"
                    android:orderInCategory="100"
                    android:showAsAction="never"
                    android:title="@string/action_2"/>
            </group>
            <group android:id="@+id/group2">
                <item
                    android:id="@+id/action32"
                    android:orderInCategory="100"
                    android:showAsAction="never"
                    android:title="@string/action_3"/>
            </group>
        </menu>
    </item>

</menu>