<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/img_register_bg"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:gravity="center_horizontal" >
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider" />

                    <EditText
                        android:id="@+id/et_register_input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:background="@null"
                        android:hint="@string/input_phone"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:textColorHint="@color/text_gray_hint"
                        android:textSize="@dimen/text_hint_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="42dp" >

                        <EditText
                            android:id="@+id/et_reset_verify_code"
                            android:layout_width="match_parent"
                            android:layout_height="42dp"
                            android:layout_alignParentLeft="true"
                            android:background="@null"
                            android:hint="@string/verify_code"
                            android:inputType="text"
                            android:singleLine="true"
                            android:textColorHint="@color/text_gray_hint"
                            android:textSize="@dimen/text_hint_size" />

                        <Button
                            android:id="@+id/btn_reset_send_code"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/sel_btn_white"
                            android:text="@string/send_verify_code"
                            android:textSize="@dimen/text_size" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider" />

                    <EditText
                        android:id="@+id/et_register_setting_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:background="@null"
                        android:hint="@string/input_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColorHint="@color/text_gray_hint"
                        android:textSize="@dimen/text_hint_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider" />

                    <EditText
                        android:id="@+id/et_register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:background="@null"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColorHint="@color/text_gray_hint"
                        android:textSize="@dimen/text_hint_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height" >

                        <CheckBox
                            android:id="@+id/cb_register_save_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:button="@drawable/sel_checkbox"
                            android:paddingLeft="25dp"
                            android:paddingRight="0dp"
                            android:text="@string/save_password"
                            android:textColor="@color/text_gray"
                            android:textSize="@dimen/text_btn_size" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider" />

                    <EditText
                        android:id="@+id/et_register_input_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:background="@null"
                        android:hint="@string/input_nickname"
                        android:singleLine="true"
                        android:textColorHint="@color/text_gray_hint"
                        android:textSize="@dimen/text_hint_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider" />

                    <EditText
                        android:id="@+id/et_register_select_birthdate"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:background="@null"
                        android:hint="@string/input_birth_date"
                        android:inputType="date"
                        android:singleLine="true"
                        android:textColorHint="@color/text_gray_hint"
                        android:textSize="@dimen/text_hint_size" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/divider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height"
                        android:gravity="center_vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/gender"
                            android:textColor="@color/text_gray_hint"
                            android:textSize="@dimen/text_hint_size" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:orientation="horizontal" >

                            <RadioButton
                                android:id="@+id/rb_register_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:button="@drawable/sel_checkbox"
                                android:checked="true"
                                android:paddingLeft="25dp"
                                android:paddingRight="0dp"
                                android:text="@string/male"
                                android:textColor="@color/text_gray" />

                            <RadioButton
                                android:id="@+id/rb_register_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:button="@drawable/sel_checkbox"
                                android:paddingLeft="25dp"
                                android:paddingRight="0dp"
                                android:text="@string/female"
                                android:textColor="@color/text_gray" />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_register_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/sel_btn_orange"
                    android:text="@string/right_to_register"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_btn_size" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="20dp" >

                    <Button
                        android:id="@+id/btn_register_visitor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@null"
                        android:text="@string/visitor_entrance"
                        android:textColor="@color/text_gray"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

</LinearLayout>
