<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MyLayoutTab"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/view_tab0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
			    android:duplicateParentState="true"
                android:src="@drawable/sel_tab0_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/tab_name0"
                android:textColor="@color/sel_tab_text"
                android:textSize="@dimen/text_tab_size" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/view_tab1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:duplicateParentState="true"
                android:src="@drawable/sel_tab1_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/tab_name1"
                android:textColor="@color/sel_tab_text"
                android:textSize="@dimen/text_tab_size" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/view_tab2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:duplicateParentState="true"
                android:src="@drawable/sel_tab2_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/tab_name2"
                android:textColor="@color/sel_tab_text"
                android:textSize="@dimen/text_tab_size" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/view_tab3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:duplicateParentState="true"
                android:src="@drawable/sel_tab3_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/tab_name3"
                android:textColor="@color/sel_tab_text"
                android:textSize="@dimen/text_tab_size" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/view_tab4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:duplicateParentState="true"
                android:src="@drawable/sel_tab4_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:duplicateParentState="true"
                android:gravity="center"
                android:text="@string/tab_name4"
                android:textColor="@color/sel_tab_text"
                android:textSize="@dimen/text_tab_size" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>